# micro-kotlin-args

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  release.bzl  settings.xml  versions.bzl
.github/workflows/: ci.yml
examples/: basic.kts  kscript_deps_example.kts  kscript_example.kts  kscript_local_example.kts  kscript_remote_example.kts
src/main/kotlin/: ArgsParser.kt  BUILD.bazel
src/test/kotlin/args/: ArgsParserTest.kt  BUILD.bazel
