load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")
load("//:release.bzl", "deployment_jar", "maven_pom", "sources_jar")

load(
    "//:versions.bzl",
    "JAVA_LANGUAGE_LEVEL",
    "KOTLIN_LANGUAGE_LEVEL",
    "LIBRARY_ARTIFACT_ID",
    "LIBRARY_VERSION",
)

package(default_visibility = ["//:__subpackages__"])

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = KOTLIN_LANGUAGE_LEVEL,
    jvm_target = JAVA_LANGUAGE_LEVEL,
    language_version = KOTLIN_LANGUAGE_LEVEL,
)

maven_pom(
    name = "argslib_pom",
    artifact_id = LIBRARY_ARTIFACT_ID,
    version = LIBRARY_VERSION,
    target = "//src/main/kotlin:argslib",
)

sources_jar(
    name = "argslib_sources_jar",
    artifact_id = LIBRARY_ARTIFACT_ID,
    version = LIBRARY_VERSION,
    target = "//src/main/kotlin:argslib",
)

deployment_jar(
    name = "argslib_deployment_jar",
    artifact_id = LIBRARY_ARTIFACT_ID,
    version = LIBRARY_VERSION,
    target = "//src/main/kotlin:argslib",
)
